# Expense-Tracker-Classification

./: .gitignore  README.md  description.md  main.py  pyproject.toml
.docs/: 01_plan.md  02_eda.md  03_results.md  04_session_notes.md  04_tutorial.md  05_mlflow.md  05_split_strategy_review.md  06_rare_class_improvements.md
artifacts/: evaluation_summary.json
notebooks/: expense_classification_report.ipynb
peakflo/: __init__.py  cli.py  data.py  model.py  reporting.py
src/: __init__.py  feature_engineering_pipeline.py  inference_pipeline.py  tracker.py  training_pipeline.py
tests/: test_data.py  test_model.py  test_results_rendering.py  test_tracker.py
