[project]
name = "peakflo"
version = "0.1.0"
description = "Peakflo expense account classification pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "joblib>=1.5.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
peakflo = "src.training_pipeline:main"
