[project]
name = "peakflo"
version = "0.1.0"
description = "Peakflo expense account classification pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "ipykernel>=7.2.0",
    "joblib>=1.5.3",
    "jupyter>=1.1.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.8",
    "mlflow>=1.27.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pytest>=9.0.3",
    "scikit-learn>=1.8.0",
]

[project.scripts]
peakflo = "src.training_pipeline:main"
